# agentic-compliance-checker

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  Makefile  NOTICE  README.md  docker-compose.yml  langgraph.json  pyproject.toml
.codex/: config.toml
.github/workflows/: ci.yml  eval.yml
data/: controls.yaml  golden_set.yaml  golden_set_stub.yaml
docs/: ARCHITECTURE.md  DECISIONS.md  DEFINITION_OF_DONE.md  EVAL_PLAN.md  EXECUTION_FLOW.md  MILESTONES.md  RUBRIC.md  SPEC.md  TEST_PLAN.md  THREAT_MODEL.md
scripts/: ablation_naive.py  generate_golden.py  run_eval.py
src/agentic_compliance/: __init__.py  cli.py  control_selection.py  evaluation.py  evidence_collector.py  golden.py  golden_generation.py  graph.py  kb.py  mcp_server.py  repo_loader.py  retriever.py  run_log.py  schemas.py  tools.py
tests/: README.md  test_control_selection.py  test_controls_retriever.py  test_eval.py  test_evidence_node.py  test_golden.py  test_graph.py  test_mcp_tools.py  test_repo_loader.py  test_run_log.py  test_scaffold.py
tests/fixtures/repos/: README.md
tests/fixtures/repos/ci_no_security_repo/.github/workflows/: build.yml
tests/fixtures/repos/ci_partial_scanning_repo/.github/workflows/: security.yml
tests/fixtures/repos/ci_scanning_repo/.github/workflows/: security.yml
tests/fixtures/repos/hardcoded_secret_app/: config.py
tests/fixtures/repos/insecure_terraform_app/: main.tf
tests/fixtures/repos/no_iac_repo/: app.py
tests/fixtures/repos/partial_network_app/: main.tf
tests/fixtures/repos/prompt_injection_repo/: README.md
tests/fixtures/repos/secure_terraform_app/: main.tf
